[package]
name = "hadb-changeset"
version = "0.3.2"
edition = "2021"
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/russellromney/hadb-changeset"
description = "Unified replication formats for embedded databases. Physical (.hadbp) and journal (.hadbj) changesets with SHA-256 checksum chaining."
keywords = ["replication", "changeset", "s3", "embedded-database", "ha"]
categories = ["database", "encoding"]
readme = "README.md"

[features]
default = []
test-utils = []
journal = ["zstd"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
crc32c = "0.6"
# Phase Anvil f: byte-level storage trait. Replaces hadb-io::ObjectStore.
hadb-storage = { path = "../hadb/hadb-storage", version = "0.4.0" }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
rand = "0.8"
